--- a/src/qt/res/css/drkblue.css
+++ b/src/qt/res/css/drkblue.css
@@ -68,7 +68,7 @@ QComboBox{
     min-height: 24px !important;
 }
 QComboBox::down-arrow {
-    border-image: url(':/images/pac/drkblue_downArrow') 0 0 0 0 stretch stretch;
+    border-image: url(':/images/drkblue/drkblue_downArrow') 0 0 0 0 stretch stretch;
 }
 QComboBox::drop-down {
     width:25px;
@@ -233,7 +233,7 @@ QScrollBar::handle:vertical:hover, QScrollBar::handle:horizontal:hover {
 }
 QScrollBar::sub-line:vertical, QScrollBar::sub-line:horizontal{
     margin: 3px 0px 3px 0px;
-    border-image: url(:/images/pac/drkblue_upArrow_small);
+    border-image: url(:/images/drkblue/drkblue_upArrow_small);
     height: 10px;
     width: 10px;
     subcontrol-position: top;
@@ -241,21 +241,21 @@ QScrollBar::sub-line:vertical, QScrollBar::sub-line:horizontal{
 }
 QScrollBar::add-line:vertical, QScrollBar::add-line:horizontal {
     margin: 3px 0px 3px 0px;
-    border-image: url(:/images/pac/drkblue_downArrow_small);
+    border-image: url(:/images/drkblue/drkblue_downArrow_small);
     height: 10px;
     width: 10px;
     subcontrol-position: bottom;
     subcontrol-origin: margin;
 }
 QScrollBar::sub-line:vertical:hover, QScrollBar::sub-line:vertical:on , QScrollBar::sub-line:horizontal:hover, QScrollBar::sub-line:horizontal:on{
-    border-image: url(:/images/pac/drkblue_upArrow_small);
+    border-image: url(:/images/drkblue/drkblue_upArrow_small);
     height: 10px;
     width: 10px;
     subcontrol-position: top;
     subcontrol-origin: margin;
 }
 QScrollBar::add-line:vertical:hover, QScrollBar::add-line:vertical:on, QScrollBar::add-line:horizontal:hover, QScrollBar::add-line:horizontal:on{
-    border-image: url(:/images/pac/drkblue_downArrow_small);
+    border-image: url(:/images/drkblue/drkblue_downArrow_small);
     height: 10px;
     width: 10px;
     subcontrol-position: bottom;
@@ -293,7 +293,7 @@ QAbstractSpinBox::up-button {
     padding-top:2px;
 }
 QAbstractSpinBox::up-arrow {
-    image: url(':/images/pac/drkblue_upArrow_small') 0 0 0 0 stretch stretch;
+    image: url(':/images/drkblue/drkblue_upArrow_small') 0 0 0 0 stretch stretch;
 }
 QAbstractSpinBox::down-button {
     subcontrol-origin: border;
@@ -306,7 +306,7 @@ QAbstractSpinBox::down-button {
     padding-bottom:2px;
 }
 QAbstractSpinBox::down-arrow {
-    image: url(':/images/pac/drkblue_downArrow_small') 0.5 0.5 0.5 0.5 stretch stretch;
+    image: url(':/images/drkblue/drkblue_downArrow_small') 0.5 0.5 0.5 0.5 stretch stretch;
 }
 /* Global tables */
 QHeaderView { /* Top of the table Header */
@@ -328,13 +328,13 @@ QHeaderView::section { /* Top of the table Header Sections */
     padding-bottom:2px;
 }
 QHeaderView::down-arrow{
-    image: url(':/images/pac/drkblue_downArrow') 0 0 0 0 stretch stretch;
+    image: url(':/images/drkblue/drkblue_downArrow') 0 0 0 0 stretch stretch;
     width: 13px;
     height: 13px;
     margin-right: 5px;
 }
 QHeaderView::up-arrow{
-    image: url(':/images/pac/drkblue_upArrow_small') 0 0 0 0 stretch stretch;
+    image: url(':/images/drkblue/drkblue_upArrow_small') 0 0 0 0 stretch stretch;
     width: 13px;
     height: 13px;
     margin-right: 5px;
@@ -460,29 +460,29 @@ QCheckBox, QRadioButton {
 }
 /* Global checbox */
 QCheckBox::indicator:unchecked, QCheckBox::indicator:unchecked:hover, QCheckBox::indicator:unchecked:pressed, QCheckBox::indicator:indeterminate:hover{
-    image:url(':/images/pac/unchecked_b');
+    image:url(':/images/drkblue/unchecked_b');
 }
 QCheckBox::indicator:checked, QCheckBox::indicator:checked:hover, QCheckBox::indicator:checked:pressed, QCheckBox::indicator:indeterminate:pressed {
-    image:url(':/images/pac/checked_b');
+    image:url(':/images/drkblue/checked_b');
 }
 QCheckBox::indicator:checked:disabled{
-    image:url(':/images/pac/checked_b_dis');
+    image:url(':/images/drkblue/checked_b_dis');
 }
 QCheckBox::indicator:unchecked:disabled{
-    image:url(':/images/pac/unchecked_b_dis');
+    image:url(':/images/drkblue/unchecked_b_dis');
 }
 /* Global radio button */
 QRadioButton::indicator:unchecked, QRadioButton::indicator:unchecked:hover, QRadioButton::indicator:checked:pressed, QRadioButton::indicator:indeterminate:hover {
-    image:url(':/images/pac/unchecked');
+    image:url(':/images/drkblue/unchecked');
 }
 QRadioButton::indicator:unchecked:pressed, QRadioButton::indicator:checked, QRadioButton::indicator:checked:hover , QRadioButton::indicator:indeterminate:pressed {
-    image:url(':/images/pac/checked');
+    image:url(':/images/drkblue/checked');
 }
 QRadioButton::indicator:checked:disabled{
-    image:url(':/images/pac/checked_dis');
+    image:url(':/images/drkblue/checked_dis');
 }
 QRadioButton::indicator:unchecked:disabled{
-    image:url(':/images/pac/unchecked_dis');
+    image:url(':/images/drkblue/unchecked_dis');
 }
 /* ComboBox dropdown Menus for the selector of PAC units inside BitcoinAmountField inputs  */
 BitcoinAmountField QComboBox {
@@ -512,7 +512,7 @@ BitcoinAmountField QComboBox::drop-down {
     border:0px;
 }
 BitcoinAmountField QComboBox::down-arrow {
-    border-image: url(':/images/pac/drkblue_downArrow') 0 0 0 0 stretch stretch;
+    border-image: url(':/images/drkblue/drkblue_downArrow') 0 0 0 0 stretch stretch;
 }
 BitcoinAmountField QComboBox QListView{
     color: #FFF;
@@ -1603,7 +1603,7 @@ QComboBox#startDateWidget, QComboBox#endDateWidget{
     min-height: 24px !important;
 }
 #startDateWidget::down-arrow, #endDateWidget::down-arrow {
-    border-image: url(':/images/pac/drkblue_downArrow') 0 0 0 0 stretch stretch;
+    border-image: url(':/images/drkblue/drkblue_downArrow') 0 0 0 0 stretch stretch;
 }
 #startDateWidget::drop-down, #endDateWidget::drop-down {
     width:25px;
