--- a/src/qt/paccoin.qrc
+++ b/src/qt/paccoin.qrc
@@ -4,6 +4,15 @@
         <file alias="prompticon">res/icons/chevron.png</file>
         <file alias="warning">res/icons/warning.png</file>
     </qresource>
+    <qresource prefix="/fonts">
+        <file alias="VolteRounded-Regular">res/fonts/VolteRounded-Regular.otf</file>
+        <file alias="VolteRounded-Bold">res/fonts/VolteRounded-Bold.otf</file>
+        <file alias="VolteRounded-Light">res/fonts/VolteRounded-Light.otf</file>
+        <file alias="VolteRounded-Medium">res/fonts/VolteRounded-Medium.otf</file>
+        <file alias="VolteRounded-Semibold">res/fonts/VolteRounded-Semibold.otf</file>
+        <file alias="Gotham-Medium">res/fonts/Gotham-Medium.ttf</file>
+        <file alias="Gotham-Bold">res/fonts/Gotham-Bold.otf</file>
+    </qresource>
     <qresource prefix="/icons/drkblue">
         <file alias="address-book">res/icons/drkblue/address-book.png</file>
         <file alias="quit">res/icons/drkblue/quit.png</file>
