--- a/src/qt/res/css/drkblue.css
+++ b/src/qt/res/css/drkblue.css
@@ -581,10 +581,10 @@ BitcoinAmountField QComboBox::indicator {
 /*
  * SendCoins Page
 */
-#lineEditCoinControlChange{
+/*#lineEditCoinControlChange{
     background-color: rgba(67,67,67,0.5);
     color: #fff;
-}
+}*/
 #SendCoinsDialog{
     background:transparent;
 }
