--- a/src/qt/paccoin.qrc
+++ b/src/qt/paccoin.qrc
@@ -1,6 +1,7 @@
 <RCC>
     <qresource prefix="/icons">
         <file alias="bitcoin">res/icons/bitcoin.png</file>
+        <file alias="bitcoin-32">res/icons/bitcoin-32.png</file>
         <file alias="prompticon">res/icons/chevron.png</file>
         <file alias="warning">res/icons/warning.png</file>
     </qresource>
@@ -35,6 +36,7 @@
         <file alias="eye_plus">res/icons/drkblue/eye_plus.png</file>
         <file alias="options">res/icons/drkblue/configure.png</file>
         <file alias="receiving_addresses">res/icons/drkblue/receive.png</file>
+        <file alias="proposal">res/icons/drkblue/proposal.png</file>
         <file alias="editpaste">res/icons/drkblue/editpaste.png</file>
         <file alias="editcopy">res/icons/drkblue/editcopy.png</file>
         <file alias="add">res/icons/drkblue/add.png</file>
