--- a/src/qt/forms/privatepage.ui
+++ b/src/qt/forms/privatepage.ui
@@ -94,6 +94,9 @@
          <property name="frameShadow">
           <enum>QFrame::Raised</enum>
          </property>
+         <property name="class" stdset="0">
+          <string>container</string>
+         </property>
          <layout class="QVBoxLayout" name="VerticalLayout_PS1">
           <item>
            <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -174,7 +177,7 @@
                  <string>Information about PrivateSend and Mixing</string>
                 </property>
                 <property name="styleSheet">
-                 <string notr="true">border-image: url(&quot;:/icons/pac/info&quot;);</string>
+                 <string notr="true">border-image: url(&quot;:/icons/drkblue/info&quot;);</string>
                 </property>
                 <property name="text">
                  <string/>
